# Ender-Character-Creation

./: index.html  index.html.bak  package-lock.json  package.json  tsconfig.json
scripts/: rename-exe.cjs  rename-msi.cjs
src/: App.tsx  sheet.js  styles.css
src bak/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
