[package]
name = "character-atelier-sheet"
version = "0.0.0"
description = "Character Atelier Sheet"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-read-file", "fs-create-dir", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", package = "tauri-plugin-single-instance" }

[features]
custom-protocol = ["tauri/custom-protocol"]
